# dat-main

./: .gitbook.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev-dat-platform.sh  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  run-dat-platform.sh  run_dat_platform.bat  update-dat-platform.sh  update-dat-user.sh  verified_stub_generator_cli.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
cli/: main.py
cli/templates/: catalog.yml.txt  destination.py.txt  generator.py.txt  source.py.txt  specs.py.txt  specs.yml.txt
db-scripts/: 001-create-db-seed.sql
docs/: README.md  SUMMARY.md
docs/community-resources/: open-source-community.md
docs/getting-started/: familiarizing-with-the-ui.md
docs/getting-started/deploy-dat/: README.md  quickstart.md  system-requirements.md  using-docker-compose.md
docs/getting-started/first-connection/: README.md  destination.md  generator.md  source.md
docs/includes/: cards.html
docs/integrations/: README.md
docs/integrations/destinations/: README.md  milvus.md  qdrant.md  (+2 more)
docs/introduction/: README.md
docs/overview/: about-dat.md  dat-features.md  dat-support.md  dat-system-architecture.md
docs/product-updates/: upcoming-features.md
samples/: minio_test.py
sh-scripts/: actors-seed.bat  actors-seed.sh  actors.csv
txt/: dat-build-complete.txt
verified_stub_generator_cli/: main.py
verified_stub_generator_cli/templates/: catalog.py.txt  destination.py.txt  generator.py.txt  source.py.txt  specs.py.txt  specs.yml.txt  streams.py.txt
(+31 files in other folders)
